fix captcha disclaimer font size, fix whitespace at bottom of page by adding min-width to body component

--- a/src/componenents/contact/contact-form.module.css
+++ b/src/componenents/contact/contact-form.module.css
@@ -20,6 +20,7 @@ input,
 textArea {
   width: 80vw;
   color: black;
+  resize: vertical;
 }
 input,
 button {
@@ -33,6 +34,8 @@ button {
 }
 .privatePolicy {
   padding-bottom: 14px;
+  font-size: 11px;
+  max-width: 80%;
 }
 @media all and (min-width: 700px) {
   .title {
