--- a/src/componenents/contact/contact-page.module.css
+++ b/src/componenents/contact/contact-page.module.css
@@ -8,7 +8,7 @@
 .picture {
   width: 80vw;
   height: auto;
-  margin: 50px 0;
+  margin: 50px 10px;
   -moz-box-shadow: inset 0 0 10px #000000;
   -webkit-box-shadow: inset 0 0 10px #000000;
   box-shadow: 0 0 10px #000000;
