--- a/src/componenents/containers/body.module.css
+++ b/src/componenents/containers/body.module.css
@@ -1,3 +1,8 @@
 .body {
-  background-color: green;
+  min-height: calc(100vh - 152px);
+}
+@media all and (min-width: 960px) {
+  .body {
+    min-height: calc(100vh - 230px);
+  }
 }
